# serialpy

./: README.md  pyproject.toml  setup.cfg
serialpy/: __init__.py  async_serial.py  descriptor_transport.py  serial.py
tests/: test_zstack_version.py  test_zstack_version_async.py
