[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "serialpy"
dynamic = ["version"]
description = "POSIX serial library with native async support"
urls = {repository = "https://github.com/puddly/serialpy"}
authors = [
    {name = "puddly", email = "puddly3@gmail.com"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = []

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
safe = true
quiet = true

[tool.isort]
multi_line_output = 3
length_sort = true
balanced_wrapping = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
indent = "    "
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["serialpy", "tests"]
forced_separate = "tests"
combine_as_imports = true

[tool.pytest.ini_options]
addopts = "--showlocals --verbose"
testpaths = ["tests"]
timeout = 20
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.flake8]
exclude = ".venv,.git,.tox,docs,venv,bin,lib,deps,build"
# To work with Black
max-line-length = 120
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
ignore = "W503,E203,D202"

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
show_error_context = true

[tool.coverage.run]
source = ["serialpy"]

[tool.pyupgrade]
py37plus = true
