[metadata]
name = serialpy
description = Just a serial library
version = 0.0.1

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
testing =
    pytest>=7.1.2
    pytest-asyncio>=0.19.0
    pytest-timeout>=2.1.0
    pytest-mock>=3.8.2
    pytest-cov>=3.0.0
    coveralls
    asynctest; python_version < "3.8.0"
